--- a/package.json
+++ b/package.json
@@ -5,11 +5,16 @@
   "dependencies": {
     "@ant-design/pro-form": "^1.55.0",
     "@ant-design/pro-table": "^2.64.1",
+    "@apollo/client": "^3.5.10",
+    "@react-keycloak/web": "^3.4.0",
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
     "antd": "^4.18.6",
     "firebase": "^9.6.6",
+    "graphql": "^16.3.0",
+    "keycloak-js": "^17.0.0",
+    "parse": "^3.4.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.3.0",
