--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
   },
   "dependencies": {
     "express": "^4.17.3",
-    "parse-server": "^4.10.4"
+    "keycloak-connect": "17.0.0",
+    "parse-dashboard": "^4.0.1",
+    "parse-server": "^4.10.4",
+    "request": "^2.88.2"
   }
 }
