--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "express": "^4.17.3",
+    "jwt-decode": "^3.1.2",
     "keycloak-connect": "17.0.0",
     "parse-dashboard": "^4.0.1",
     "parse-server": "^4.10.4",
